2004-12-06  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngException.cs : don't store debug string. It was so harmful
	  for performance.

2004-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngValidatingReader.cs :
	  - Better way to expose API; use ExpectedElements and 
	    ExpectedAttributes of type ICollection. Now GetLabels is obsolete.
	  - Implemented notAllowed check. It might be too heavy since it
	    checks all the QNames returned by GetLabels. In such case, use
	    RoughLabelCheck = true.
	  - Added RoughLabelCheck of type bool that indicates to omit
	    notAllowed check.

2004-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngValidatingReader.cs : no, it was very easy. But to avoid
	  state-changeful property, it is now bool Emptiable().

2004-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngValidatingReader.cs : reverted IsEmptiable. It was not ready.

2004-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngPattern.cs : added GetLabels() override to RdpUnresolvedRef.
	* RelaxngValidatingReader.cs :
	  Added GetLabels() that collects "allowed element names and
	  attributes" at current state.
	  Added IsEmptiable that indicates whether current reader can be
	  closed by an end tag.

2004-11-28  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngGrammar.cs : fixed error that happened on recompilation.

2004-07-14  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngGrammar.cs : When definition is missing, the error message
	  should show what definition is missing.

2004-06-25  Atsushi Enomoto <atsushi@ximian.com>

	* Misc.cs, RelaxngDatatype.cs, RelaxngDatatypeProvider.cs,
	  RelaxngDefaultDatatype.cs, RelaxngException.cs, RelaxngGrammar.cs,
	  RelaxngMergedProvider.cs, RelaxngNameClass.cs, RelaxngPattern.cs,
	  RelaxngPatternType.cs, RelaxngReader.cs, RelaxngValidatingReader.cs,
	  XsdDatatypeProvider.cs : Added/replaced novell license term.

2004-06-21  Atsushi Enomoto <atsushi@ximian.com>

	* Misc.cs,
	  RelaxngPattern.cs,